overflow fix

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -12,6 +12,10 @@ body {
   overflow-x: hidden;
 }
 
+.home-container {
+  overflow-x: hidden;
+}
+
 .App {
   position: relative;
 }
